// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publication Details Component  should render component 1`] = `
<StandardCard
  className=""
  title="Publication details"
>
  <Table
    allRowsSelected={false}
    className="publicationDetails"
    fixedFooter={true}
    fixedHeader={true}
    height="inherit"
    multiSelectable={false}
    selectable={false}
  >
    <TableBody
      allRowsSelected={false}
      deselectOnClickaway={true}
      displayRowCheckbox={false}
      multiSelectable={false}
      preScanRows={true}
      selectable={true}
      style={Object {}}
    >
      <TableRow
        className="tableRow"
        displayBorder={true}
        hoverable={false}
        hovered={false}
        selectable={true}
        striped={false}
      >
        <TableRowColumn
          className="headingColumn"
          hoverable={false}
        >
          Publication type
        </TableRowColumn>
        <TableRowColumn
          className="dataColumn"
          hoverable={false}
        >
          Journal Article
        </TableRowColumn>
      </TableRow>
      <TableRow
        className="tableRow"
        displayBorder={true}
        hoverable={false}
        hovered={false}
        selectable={true}
        striped={false}
      >
        <TableRowColumn
          className="headingColumn"
          hoverable={false}
        >
          Sub-type
        </TableRowColumn>
        <TableRowColumn
          className="dataColumn"
          hoverable={false}
        >
          Article (original research)
        </TableRowColumn>
      </TableRow>
      <TableRow
        className="tableRow"
        displayBorder={true}
        hoverable={false}
        hovered={false}
        selectable={true}
        striped={false}
      >
        <TableRowColumn
          className="headingColumn"
          hoverable={false}
        >
          Collections
        </TableRowColumn>
        <TableRowColumn
          className="dataColumn"
          hoverable={false}
        >
          <ul
            className="is-paddingless is-marginless"
            style={
              Object {
                "listStyleType": "none",
              }
            }
          >
            <li
              key="collection-0"
            >
              <a
                href="/collection/UQ:396321"
              >
                School of Chemistry and Molecular Biosciences
              </a>
            </li>
            <li
              key="collection-1"
            >
              <a
                href="/collection/UQ:396321"
              >
                HERDC Pre-Audit
              </a>
            </li>
            <li
              key="collection-2"
            >
              <a
                href="/collection/UQ:396321"
              >
                UQ Centre for Clinical Research Publications
              </a>
            </li>
          </ul>
        </TableRowColumn>
      </TableRow>
    </TableBody>
  </Table>
</StandardCard>
`;

exports[`Publication Details Component  should render with publication without collection data 1`] = `
<StandardCard
  className=""
  title="Publication details"
>
  <Table
    allRowsSelected={false}
    className="publicationDetails"
    fixedFooter={true}
    fixedHeader={true}
    height="inherit"
    multiSelectable={false}
    selectable={false}
  >
    <TableBody
      allRowsSelected={false}
      deselectOnClickaway={true}
      displayRowCheckbox={false}
      multiSelectable={false}
      preScanRows={true}
      selectable={true}
      style={Object {}}
    >
      <TableRow
        className="tableRow"
        displayBorder={true}
        hoverable={false}
        hovered={false}
        selectable={true}
        striped={false}
      >
        <TableRowColumn
          className="headingColumn"
          hoverable={false}
        >
          Publication type
        </TableRowColumn>
        <TableRowColumn
          className="dataColumn"
          hoverable={false}
        >
          Journal Article
        </TableRowColumn>
      </TableRow>
    </TableBody>
  </Table>
</StandardCard>
`;

exports[`Publication Details Component  should render with publication without subtype data 1`] = `
<StandardCard
  className=""
  title="Publication details"
>
  <Table
    allRowsSelected={false}
    className="publicationDetails"
    fixedFooter={true}
    fixedHeader={true}
    height="inherit"
    multiSelectable={false}
    selectable={false}
  >
    <TableBody
      allRowsSelected={false}
      deselectOnClickaway={true}
      displayRowCheckbox={false}
      multiSelectable={false}
      preScanRows={true}
      selectable={true}
      style={Object {}}
    >
      <TableRow
        className="tableRow"
        displayBorder={true}
        hoverable={false}
        hovered={false}
        selectable={true}
        striped={false}
      >
        <TableRowColumn
          className="headingColumn"
          hoverable={false}
        >
          Publication type
        </TableRowColumn>
        <TableRowColumn
          className="dataColumn"
          hoverable={false}
        >
          Journal Article
        </TableRowColumn>
      </TableRow>
      <TableRow
        className="tableRow"
        displayBorder={true}
        hoverable={false}
        hovered={false}
        selectable={true}
        striped={false}
      >
        <TableRowColumn
          className="headingColumn"
          hoverable={false}
        >
          Collections
        </TableRowColumn>
        <TableRowColumn
          className="dataColumn"
          hoverable={false}
        >
          <ul
            className="is-paddingless is-marginless"
            style={
              Object {
                "listStyleType": "none",
              }
            }
          >
            <li
              key="collection-0"
            >
              <a
                href="/collection/UQ:396321"
              >
                School of Chemistry and Molecular Biosciences
              </a>
            </li>
            <li
              key="collection-1"
            >
              <a
                href="/collection/UQ:396321"
              >
                HERDC Pre-Audit
              </a>
            </li>
            <li
              key="collection-2"
            >
              <a
                href="/collection/UQ:396321"
              >
                UQ Centre for Clinical Research Publications
              </a>
            </li>
          </ul>
        </TableRowColumn>
      </TableRow>
    </TableBody>
  </Table>
</StandardCard>
`;
